--- a/index.html
+++ b/index.html
@@ -139,18 +139,18 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">I’m a self-learner and passionate about solving challenges, with experience in the latest web technologies as well as strong communi- cation and project management skills.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">Whether you're a small Start-Up company or a well established one, you won't ever regret hiring me!</p>
           </div>
         </div>
-        <div class="text-center mt-4">
+        <!-- <div class="text-center mt-4">
           <a class="btn btn-xl btn-outline-light" href="#">
             <i class="fa fa-download mr-2"></i>
             Download Now!
           </a>
-        </div>
+        </div> -->
       </div>
     </section>
 
