--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/book-store.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -98,7 +98,7 @@
               <img class="img-fluid" src="img/portfolio/circus.png" alt="">
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <!-- <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -127,7 +127,7 @@
               </div>
               <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -139,7 +139,7 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">I’m a self-learner and passionate about solving challenges, with experience in the latest web technologies as well as strong communi- cation and project management skills.</p>
+            <p class="lead">I’m a self-learner and passionate about solving challenges, with experience in the latest web technologies as well as strong communication skills.</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">Whether you're a small Start-Up company or a well established one, you won't ever regret hiring me!</p>
@@ -243,9 +243,9 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Shelly</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+            <h4 class="text-uppercase mb-4">Contact Shelly</h4>
+            <p class="lead mb-0">For any further questions, feel free to contact me directly-
+              <a href="https://linkedin.com/in/shelly-blumshtein-6333826a">Send me a message</a>.</p>
           </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid mb-5" src="img/portfolio/book-store.png" alt="">
               <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
