--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
         <hr class="star-dark mb-5">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-6">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -78,7 +78,7 @@
               <img class="img-fluid" src="img/portfolio/book-store.png" alt="">
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-6">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -88,7 +88,7 @@
               <img class="img-fluid" src="img/portfolio/coffee-shop.png" alt="">
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <!-- <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -97,7 +97,7 @@
               </div>
               <img class="img-fluid" src="img/portfolio/circus.png" alt="">
             </a>
-          </div>
+          </div> -->
           <!-- <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -275,16 +275,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-<<<<<<< HEAD
               <h2 class="text-secondary text-uppercase mb-0">Book Store</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/book-store.png" alt="">
               <p class="mb-5">Angular 5 app using RxJS and Typescript.REST API application.</p>
-=======
-              <h2 class="text-secondary text-uppercase mb-0">Angular 5 Rest API App</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/book-store.png" alt="">
->>>>>>> 94176519a661cd9c443d6eaa70238e4ea792e9d9
               <h3 class="mb-5">Demo:<a href="https://shellyblum.github.io/book-store-angular5/">Click Here</a></h3>
               <h3 class="mb-5">Code:<a href="https://github.com/shellyblum/book-store-angular5">Click Here</a></h3>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
