--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Coffe Shop</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Coffee Shop</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/coffee-shop.png" alt="">
               <p class="mb-5">MEAN Stack application using Angular 1.6, Mongoose, user authentication and many other javascript goodies.</p>
